--- a/index.html
+++ b/index.html
@@ -7,30 +7,156 @@
 </head>
 <body>
 <h1>Hello World</h1>
-<p>Bla bla bla</p>
+<p>Paragraphe ici</p>
 
 
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="images/md/md-image-02.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="images/md/md-image-03.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="images/md/md-image-04.jpg" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+
+<section class="mb-5">
+
+	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+	  <div class="carousel-inner">
+	    <div class="carousel-item active">
+	      <img src="images/md/md-image-02.jpg" class="d-block w-100" alt="...">
+	    </div>
+	    <div class="carousel-item">
+	      <img src="images/md/md-image-03.jpg" class="d-block w-100" alt="...">
+	    </div>
+	    <div class="carousel-item">
+	      <img src="images/md/md-image-04.jpg" class="d-block w-100" alt="...">
+	    </div>
+	  </div>
+	  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	    <span class="sr-only">Previous</span>
+	  </a>
+	  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	    <span class="sr-only">Next</span>
+	  </a>
+	</div>
+
+</section>
+
+
+<!-- GRID COMMENCE ICI -->
+
+<div class="container">
+
+<!-- PREMIERE LIGNE -->
+
+	  <div class="row mb-4">
+	    <div class="col-xs-12 col-sm-6 col-md-8 col-lg-4">
+	      <div class="card">
+	  <img src="images/thumbnail.png" class="card-img-top" alt="...">
+	  <div class="card-body">
+	    <h5 class="card-title">Julien</h5>
+	    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	    <a href="#" class="btn btn-primary">Go somewhere</a>
+	  </div>
+	</div>
+
+	    </div>
+	    <div class="col-xs-12 col-sm-6 col-md-8 col-lg-4">
+	      <div class="card">
+	  <img src="images/thumbnail.png" class="card-img-top" alt="...">
+	  <div class="card-body">
+	    <h5 class="card-title">Card title</h5>
+	    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	    <a href="#" class="btn btn-primary">Go somewhere</a>
+	  </div>
+	</div>
+
+	    </div>
+	    <div class="col-xs-12 col-sm-6 col-md-8 col-lg-4">
+	      <div class="card">
+	  <img src="images/thumbnail.png" class="card-img-top" alt="...">
+	  <div class="card-body">
+	    <h5 class="card-title">Card title</h5>
+	    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	    <a href="#" class="btn btn-primary">Go somewhere</a>
+	  </div>
+	</div>
+	    </div>
+	  </div>
+
+  <!-- DEUXIEME LIGNE -->
+
+	  <div class="row mb-4">
+	    <div class="col-xs-12 col-sm-6 col-md-8 col-lg-4">
+	      <div class="card">
+	  <img src="images/thumbnail.png" class="card-img-top" alt="...">
+	  <div class="card-body">
+	    <h5 class="card-title">Julien</h5>
+	    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	    <a href="#" class="btn btn-primary">Go somewhere</a>
+	  </div>
+	</div>
+
+	    </div>
+	    <div class="col-xs-12 col-sm-6 col-md-8 col-lg-4">
+	      <div class="card">
+	  <img src="images/thumbnail.png" class="card-img-top" alt="...">
+	  <div class="card-body">
+	    <h5 class="card-title">Card title</h5>
+	    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	    <a href="#" class="btn btn-primary">Go somewhere</a>
+	  </div>
+	</div>
+
+	    </div>
+	    <div class="col-xs-12 col-sm-6 col-md-8 col-lg-4">
+	      <div class="card">
+	  <img src="images/thumbnail.png" class="card-img-top" alt="...">
+	  <div class="card-body">
+	    <h5 class="card-title">Card title</h5>
+	    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	    <a href="#" class="btn btn-primary">Go somewhere</a>
+	  </div>
+	</div>
+	    </div>
+	  </div>
+
+  <!-- TROISIEME LIGNE -->
+
+	  <div class="row mb-4">
+	    <div class="col-xs-12 col-sm-6 col-md-8 col-lg-4">
+	      <div class="card">
+	  <img src="images/thumbnail.png" class="card-img-top" alt="...">
+	  <div class="card-body">
+	    <h5 class="card-title">Julien</h5>
+	    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	    <a href="#" class="btn btn-primary">Go somewhere</a>
+	  </div>
+	</div>
+
+	    </div>
+	    <div class="col-xs-12 col-sm-6 col-md-8 col-lg-4">
+	      <div class="card">
+	  <img src="images/thumbnail.png" class="card-img-top" alt="...">
+	  <div class="card-body">
+	    <h5 class="card-title">Card title</h5>
+	    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	    <a href="#" class="btn btn-primary">Go somewhere</a>
+	  </div>
+	</div>
+
+	    </div>
+	    <div class="col-xs-12 col-sm-6 col-md-8 col-lg-4">
+	      <div class="card">
+	  <img src="images/thumbnail.png" class="card-img-top" alt="...">
+	  <div class="card-body">
+	    <h5 class="card-title">Card title</h5>
+	    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	    <a href="#" class="btn btn-primary">Go somewhere</a>
+	  </div>
+	</div>
+	    </div>
+	  </div>
+
 </div>
+
+
+
 
 
 
